test/spec/block.txt
;;; TOOL: run-js-spec
;;; STDIN_FILE: third_party/testsuite/block.wast
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/block.wast:134:30: type mismatch of block. got void, expected i32
  (module (func (result i32) (block)))
                             ^
assert_invalid error:
  third_party/testsuite/block.wast:138:37: type mismatch in nop. got void, expected i32
  (module (func (result i32) (block (nop))))
                                    ^
assert_invalid error:
  third_party/testsuite/block.wast:142:37: type mismatch of block. got f32, expected i32
  (module (func (result i32) (block (f32.const 0))))
                                    ^
assert_invalid error:
  third_party/testsuite/block.wast:146:37: type mismatch of br value. got void, expected i32
  (module (func (result i32) (block (br 0) (i32.const 1))))
                                    ^
assert_invalid error:
  third_party/testsuite/block.wast:150:58: type mismatch in nop. got void, expected i32
  (module (func (result i32) (block (br 0 (i32.const 1)) (nop))))
                                                         ^
assert_invalid error:
  third_party/testsuite/block.wast:154:43: type mismatch of br value. got i64, expected i32
  (module (func (result i32) (block (br 0 (i64.const 1)) (i32.const 1))))
                                          ^
assert_invalid error:
  third_party/testsuite/block.wast:158:43: type mismatch of br value. got i64, expected i32
  (module (func (result i32) (block (br 0 (i64.const 1)) (br 0 (i32.const 1)))))
                                          ^
assert_invalid error:
  third_party/testsuite/block.wast:162:50: type mismatch of br value. got i64, expected i32
...func (result i32) (block (block (br 1 (i64.const 1))) (br 0 (i32.const 1)))))
                                         ^
19/19 tests passed.
;;; STDOUT ;;)
